--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="section">  </div>
         <div class="section">  </div>
         <div class="section">
-            <iframe src="https://player.vimeo.com/video/988246941?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="1920" height="1080" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="이동헌_뉴미디어 광고"></iframe>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/988246895?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="이동헌_로고등장"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         </div>
 
     <script>
